2023-07-29  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/962030e70ad3dfcce5d4642ad65890fde93ad117 ) and raygui ( https://github.com/raysan5/raygui/commit/36365199b11dd967e7147e64c85ccfda8c5064d1 )

2023-07-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/textures_image_rotate.rb: Added
	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/22895ba14fab982ca74ec1526b48b924d1174e60 ) and raygui ( https://github.com/raysan5/raygui/commit/848569ce3399a8f6fe00091f968808f3ab042c4b )

2023-06-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/0c126af7171e51fff9f94c4f2e498f43f60d617b ) and raygui ( https://github.com/raysan5/raygui/commit/fa1c93cdcc6df2cd45f5a1d9249291465a24cd8c )

2023-06-10  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/raygui_main.rb: Renamed from 'raygui.rb'
	* lib/raygui_helper.rb: Minimal raygui wrapper to cope with raygui-4.0 API changes

2023-05-27  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/aad51d47048f9eb5c13bbbd65dc5cd4d37aa68e5 ) and raygui ( https://github.com/raysan5/raygui/commit/ce358972efcc9c3c85f9806104f525210da08787 )

2023-05-22  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/textures_image_generation.rb: Added
	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/a4a6d4da8a26d131bc3f3e643f6fe51de281d15f ) and raygui ( https://github.com/raysan5/raygui/commit/135718ee04d57493039fd7b8fb1d73b49f3ec1ea )

2023-05-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/5978358e5877b0033584334c5bf6ec7d8cf22ae8 ) and raygui ( https://github.com/raysan5/raygui/commit/aa81c167f10707ea173ea1190eda18e57d841b8f )

2023-04-15  vaiorabbit  <http://twitter.com/vaiorabbit>
