@@ -1429,6 +1429,11 @@
           "description": "Set to support mouse passthrough, only supported when FLAG_WINDOW_UNDECORATED"
         },
         {
+          "name": "FLAG_BORDERLESS_WINDOWED_MODE",
+          "value": 32768,
+          "description": "Set to run program in borderless windowed mode"
+        },
+        {
           "name": "FLAG_MSAA_4X_HINT",
           "value": 32,
           "description": "Set to try enabling MSAA 4X"
@@ -2605,58 +2610,73 @@
           "description": "32*4 bpp (4 channels - float)"
         },
         {
-          "name": "PIXELFORMAT_COMPRESSED_DXT1_RGB",
+          "name": "PIXELFORMAT_UNCOMPRESSED_R16",
           "value": 11,
+          "description": "16 bpp (1 channel - half float)"
+        },
+        {
+          "name": "PIXELFORMAT_UNCOMPRESSED_R16G16B16",
+          "value": 12,
+          "description": "16*3 bpp (3 channels - half float)"
+        },
+        {
+          "name": "PIXELFORMAT_UNCOMPRESSED_R16G16B16A16",
+          "value": 13,
+          "description": "16*4 bpp (4 channels - half float)"
+        },
+        {
+          "name": "PIXELFORMAT_COMPRESSED_DXT1_RGB",
+          "value": 14,
           "description": "4 bpp (no alpha)"
         },
         {
           "name": "PIXELFORMAT_COMPRESSED_DXT1_RGBA",
-          "value": 12,
+          "value": 15,
           "description": "4 bpp (1 bit alpha)"
         },
         {
           "name": "PIXELFORMAT_COMPRESSED_DXT3_RGBA",
-          "value": 13,
+          "value": 16,
           "description": "8 bpp"
         },
         {
           "name": "PIXELFORMAT_COMPRESSED_DXT5_RGBA",
-          "value": 14,
-          "description": "8 bpp"
-        },
-        {
-          "name": "PIXELFORMAT_COMPRESSED_ETC1_RGB",
-          "value": 15,
-          "description": "4 bpp"
-        },
-        {
-          "name": "PIXELFORMAT_COMPRESSED_ETC2_RGB",
-          "value": 16,
-          "description": "4 bpp"
-        },
-        {
-          "name": "PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA",
           "value": 17,
           "description": "8 bpp"
         },
         {
-          "name": "PIXELFORMAT_COMPRESSED_PVRT_RGB",
+          "name": "PIXELFORMAT_COMPRESSED_ETC1_RGB",
           "value": 18,
           "description": "4 bpp"
         },
         {
-          "name": "PIXELFORMAT_COMPRESSED_PVRT_RGBA",
+          "name": "PIXELFORMAT_COMPRESSED_ETC2_RGB",
           "value": 19,
           "description": "4 bpp"
         },
         {
-          "name": "PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA",
+          "name": "PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA",
           "value": 20,
           "description": "8 bpp"
         },
         {
-          "name": "PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA",
+          "name": "PIXELFORMAT_COMPRESSED_PVRT_RGB",
           "value": 21,
+          "description": "4 bpp"
+        },
+        {
+          "name": "PIXELFORMAT_COMPRESSED_PVRT_RGBA",
+          "value": 22,
+          "description": "4 bpp"
+        },
+        {
+          "name": "PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA",
+          "value": 23,
+          "description": "8 bpp"
+        },
+        {
+          "name": "PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA",
+          "value": 24,
           "description": "2 bpp"
         }
       ]
@@ -3156,6 +3176,11 @@
       "returnType": "void"
     },
     {
+      "name": "ToggleBorderlessWindowed",
+      "description": "Toggle window state: borderless windowed (only PLATFORM_DESKTOP)",
+      "returnType": "void"
+    },
+    {
       "name": "MaximizeWindow",
       "description": "Set window state: maximized, if resizable (only PLATFORM_DESKTOP)",
       "returnType": "void"
@@ -3198,7 +3223,7 @@
     },
     {
       "name": "SetWindowTitle",
-      "description": "Set title for window (only PLATFORM_DESKTOP)",
+      "description": "Set title for window (only PLATFORM_DESKTOP and PLATFORM_WEB)",
       "returnType": "void",
       "params": [
         {
@@ -10287,6 +10312,17 @@
       ]
     },
     {
+      "name": "LoadSoundAlias",
+      "description": "Create a new sound that shares the same sample data as the source sound, does not own the sound data",
+      "returnType": "Sound",
+      "params": [
+        {
+          "type": "Sound",
+          "name": "source"
+        }
+      ]
+    },
+    {
       "name": "IsSoundReady",
       "description": "Checks if a sound is ready",
       "returnType": "bool",
@@ -10335,6 +10371,17 @@
         {
           "type": "Sound",
           "name": "sound"
+        }
+      ]
+    },
+    {
+      "name": "UnloadSoundAlias",
+      "description": "Unload a sound alias (does not deallocate sample data)",
+      "returnType": "void",
+      "params": [
+        {
+          "type": "Sound",
+          "name": "alias"
         }
       ]
     },
