@@ -879,58 +879,73 @@
           "description": "32*4 bpp (4 channels - float)"
         },
         {
-          "name": "RL_PIXELFORMAT_COMPRESSED_DXT1_RGB",
+          "name": "RL_PIXELFORMAT_UNCOMPRESSED_R16",
           "value": 11,
+          "description": "16 bpp (1 channel - half float)"
+        },
+        {
+          "name": "RL_PIXELFORMAT_UNCOMPRESSED_R16G16B16",
+          "value": 12,
+          "description": "16*3 bpp (3 channels - half float)"
+        },
+        {
+          "name": "RL_PIXELFORMAT_UNCOMPRESSED_R16G16B16A16",
+          "value": 13,
+          "description": "16*4 bpp (4 channels - half float)"
+        },
+        {
+          "name": "RL_PIXELFORMAT_COMPRESSED_DXT1_RGB",
+          "value": 14,
           "description": "4 bpp (no alpha)"
         },
         {
           "name": "RL_PIXELFORMAT_COMPRESSED_DXT1_RGBA",
-          "value": 12,
+          "value": 15,
           "description": "4 bpp (1 bit alpha)"
         },
         {
           "name": "RL_PIXELFORMAT_COMPRESSED_DXT3_RGBA",
-          "value": 13,
+          "value": 16,
           "description": "8 bpp"
         },
         {
           "name": "RL_PIXELFORMAT_COMPRESSED_DXT5_RGBA",
-          "value": 14,
-          "description": "8 bpp"
-        },
-        {
-          "name": "RL_PIXELFORMAT_COMPRESSED_ETC1_RGB",
-          "value": 15,
-          "description": "4 bpp"
-        },
-        {
-          "name": "RL_PIXELFORMAT_COMPRESSED_ETC2_RGB",
-          "value": 16,
-          "description": "4 bpp"
-        },
-        {
-          "name": "RL_PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA",
           "value": 17,
           "description": "8 bpp"
         },
         {
-          "name": "RL_PIXELFORMAT_COMPRESSED_PVRT_RGB",
+          "name": "RL_PIXELFORMAT_COMPRESSED_ETC1_RGB",
           "value": 18,
           "description": "4 bpp"
         },
         {
-          "name": "RL_PIXELFORMAT_COMPRESSED_PVRT_RGBA",
+          "name": "RL_PIXELFORMAT_COMPRESSED_ETC2_RGB",
           "value": 19,
           "description": "4 bpp"
         },
         {
-          "name": "RL_PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA",
+          "name": "RL_PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA",
           "value": 20,
           "description": "8 bpp"
         },
         {
-          "name": "RL_PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA",
+          "name": "RL_PIXELFORMAT_COMPRESSED_PVRT_RGB",
           "value": 21,
+          "description": "4 bpp"
+        },
+        {
+          "name": "RL_PIXELFORMAT_COMPRESSED_PVRT_RGBA",
+          "value": 22,
+          "description": "4 bpp"
+        },
+        {
+          "name": "RL_PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA",
+          "value": 23,
+          "description": "8 bpp"
+        },
+        {
+          "name": "RL_PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA",
+          "value": 24,
           "description": "2 bpp"
         }
       ]
