@@ -112,17 +112,20 @@ module Raylib
   RL_PIXELFORMAT_UNCOMPRESSED_R32 = 8           # 32 bpp (1 channel - float)
   RL_PIXELFORMAT_UNCOMPRESSED_R32G32B32 = 9     # 32*3 bpp (3 channels - float)
   RL_PIXELFORMAT_UNCOMPRESSED_R32G32B32A32 = 10 # 32*4 bpp (4 channels - float)
-  RL_PIXELFORMAT_COMPRESSED_DXT1_RGB = 11       # 4 bpp (no alpha)
-  RL_PIXELFORMAT_COMPRESSED_DXT1_RGBA = 12      # 4 bpp (1 bit alpha)
-  RL_PIXELFORMAT_COMPRESSED_DXT3_RGBA = 13      # 8 bpp
-  RL_PIXELFORMAT_COMPRESSED_DXT5_RGBA = 14      # 8 bpp
-  RL_PIXELFORMAT_COMPRESSED_ETC1_RGB = 15       # 4 bpp
-  RL_PIXELFORMAT_COMPRESSED_ETC2_RGB = 16       # 4 bpp
-  RL_PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA = 17  # 8 bpp
-  RL_PIXELFORMAT_COMPRESSED_PVRT_RGB = 18       # 4 bpp
-  RL_PIXELFORMAT_COMPRESSED_PVRT_RGBA = 19      # 4 bpp
-  RL_PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA = 20  # 8 bpp
-  RL_PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA = 21  # 2 bpp
+  RL_PIXELFORMAT_UNCOMPRESSED_R16 = 11          # 16 bpp (1 channel - half float)
+  RL_PIXELFORMAT_UNCOMPRESSED_R16G16B16 = 12    # 16*3 bpp (3 channels - half float)
+  RL_PIXELFORMAT_UNCOMPRESSED_R16G16B16A16 = 13 # 16*4 bpp (4 channels - half float)
+  RL_PIXELFORMAT_COMPRESSED_DXT1_RGB = 14       # 4 bpp (no alpha)
+  RL_PIXELFORMAT_COMPRESSED_DXT1_RGBA = 15      # 4 bpp (1 bit alpha)
+  RL_PIXELFORMAT_COMPRESSED_DXT3_RGBA = 16      # 8 bpp
+  RL_PIXELFORMAT_COMPRESSED_DXT5_RGBA = 17      # 8 bpp
+  RL_PIXELFORMAT_COMPRESSED_ETC1_RGB = 18       # 4 bpp
+  RL_PIXELFORMAT_COMPRESSED_ETC2_RGB = 19       # 4 bpp
+  RL_PIXELFORMAT_COMPRESSED_ETC2_EAC_RGBA = 20  # 8 bpp
+  RL_PIXELFORMAT_COMPRESSED_PVRT_RGB = 21       # 4 bpp
+  RL_PIXELFORMAT_COMPRESSED_PVRT_RGBA = 22      # 4 bpp
+  RL_PIXELFORMAT_COMPRESSED_ASTC_4x4_RGBA = 23  # 8 bpp
+  RL_PIXELFORMAT_COMPRESSED_ASTC_8x8_RGBA = 24  # 2 bpp
 
   # enum rlTextureFilter
   # Texture parameters: filter mode
